Image upload/get added. Models added. Pagination added. Swag updated.
