# requests/base.go
@@ -1,0 +1,5 @@
+package requests
+
+type Pagination struct {
+	Page int `json:"page" validate:"required"`
+}
